--- a/app/views/gardens/show.html.erb
+++ b/app/views/gardens/show.html.erb
@@ -4,6 +4,15 @@
   </div>
 </div>
 
+<div class="cards">
+  <% @garden.plants.each do |plant| %>
+    <div class="card-category plant-image" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= plant.image_url %>)">
+        <%= plant.name %>
+    </div>
+  <% end %>
+</div>
+
+
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-4">
