--- a/app/assets/stylesheets/components/_card.css
+++ b/app/assets/stylesheets/components/_card.css
@@ -50,3 +50,31 @@
   align-items: center;
   text-transform: uppercase;
 }
+
+
+.card-category {
+  position: relative;
+}
+
+.card-remove-link {
+  color: white;
+  border-radius: 50%;
+  border: 1px solid white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 30px;
+  width: 30px;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  opacity: 0.8;
+  transform: rotate(45deg);
+  font-weight: lighter;
+  &:hover {
+    color: white;
+    text-decoration: none;
+    opacity: 1;
+  }
+  text-decoration: none;
+}
